--- a/Matrix Frontend/src/app/app.html
+++ b/Matrix Frontend/src/app/app.html
@@ -143,7 +143,7 @@
                         Show Detailed Steps
                     </button>
                 }
-                <button (click)="isSolved = false" style="background: transparent; border: 1px solid var(--border-color);">
+                <button (click)="isSolved = false" style="background: transparent; border: 1px solid var(--border-color); color: white">
                     New Problem
                 </button>
             </div>
