--- a/Matrices/Matrix Frontend/src/app/app.css
+++ b/Matrices/Matrix Frontend/src/app/app.css
@@ -94,11 +94,11 @@ p {
     text-align: center;
     transition: box-shadow 0.25s ease, border-color 0.25s ease;
     box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.05);
-    overflow: hidden;
+    overflow-x: auto;
     text-overflow: ellipsis;
     white-space: nowrap;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 
 }
 .puzzle-cell:hover {
@@ -130,7 +130,7 @@ p {
     color: inherit;
     font: inherit;
     text-align: center;
-    padding: 0;
+    padding: 2;
     margin: 0;
     outline: none;
     box-sizing: border-box;
@@ -733,4 +733,12 @@ thead tr th.col{
 .res{
     display: flex;
     margin-left: auto;
+}
+
+.cell-value {
+    min-width: 100%;
+    text-align: center;
+    white-space: nowrap;
+    padding: 0 5px;
+    margin: 0;
 }
