--- a/Matrix Frontend/src/app/phase2/phase2.html
+++ b/Matrix Frontend/src/app/phase2/phase2.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="stat-card">
                         <span class="stat-label">Final Error</span>
-                        <span class="stat-value">{{ solutionData.steps[solutionData.steps.length-1].Error | number:'1.1-6' }}</span>
+                        <span class="stat-value">{{ solutionData.FinalError | number:'1.1-6' }}</span>
                     </div>
                 </div>
 
