--- a/Matrix Frontend/src/app/phase2/phase2.html
+++ b/Matrix Frontend/src/app/phase2/phase2.html
@@ -100,7 +100,7 @@
 
         @if(plotImage) {
             <div class="graph-card animate-slide-up">
-                <img [src]="'data:image/png;base64,' + plotImage" alt="Function Plot">
+                <img [src]="plotImage" alt="Function Plot">
             </div>
         }
     </div>
