--- a/Matrix Frontend/src/app/phase2/phase2.html
+++ b/Matrix Frontend/src/app/phase2/phase2.html
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-        <button class="btn btn-outline full-width" (click)="toggleTable()">
+        <button class="btn btn-outline full-width" style="color:rgb(255, 0, 0)" (click)="toggleTable()">
             {{ showTable ? 'Hide Iterations' : 'View Step-by-Step Table' }}
         </button>
 
